--- a/index.html
+++ b/index.html
@@ -1,5 +1,42 @@
 <!DOCTYPE html>
 <html lang="de">
-<head><meta charset="UTF-8"><title>Wohnwert Plus</title></head>
-<body><h1>Wohnwert Plus</h1><p>Startseite</p></body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Wohnwert Plus</title>
+  <style>
+    body { font-family: sans-serif; margin: 0; padding: 0; background: #f7f7f7; color: #222; }
+    header { background: #002244; padding: 2rem; text-align: center; color: white; }
+    .logo { font-size: 2rem; margin-bottom: 0.5rem; }
+    .subline { font-size: 1rem; color: #ccc; }
+    main { padding: 2rem; }
+    .intro { font-size: 1.3rem; margin-bottom: 2rem; }
+    .grid { display: flex; flex-wrap: wrap; gap: 1rem; }
+    .box {
+      background: #e6e2df;
+      border-left: 6px solid #6b4d3c;
+      padding: 1rem;
+      flex: 1 1 300px;
+      border-radius: 4px;
+    }
+    footer { background: #002244; color: white; padding: 1rem; text-align: center; font-size: 0.9rem; margin-top: 2rem; }
+  </style>
+</head>
+<body>
+  <header>
+    <div class="logo">wohnwert+</div>
+    <div class="subline">Einrichten, Pflegen, Vermieten – Kurzzeitvermietung mit System</div>
+  </header>
+  <main>
+    <div class="intro">16 Jahre Erfahrung in der Immobilienumnutzung – individuell, flexibel, wirtschaftlich.</div>
+    <div class="grid">
+      <div class="box"><strong>Bestehende Wohnungen</strong><br/>Umnutzung, Einrichtung, Service – alles aus einer Hand.</div>
+      <div class="box"><strong>Häuser und Hotels</strong><br/>Planung, Umbau und Optimierung für Kurzzeitvermietung.</div>
+      <div class="box"><strong>Freiflächen</strong><br/>Beratung & Bau von Tiny-Häusern oder Wohnmobilstellplätzen.</div>
+    </div>
+  </main>
+  <footer>
+    &copy; 2025 Wohnwert+ UG (haftungsbeschränkt), Heiligengeiststraße 6–8, 26121 Oldenburg
+  </footer>
+</body>
 </html>
