--- a/impressum.html
+++ b/impressum.html
@@ -1,13 +1,1 @@
-<!DOCTYPE html>
-<html lang="de">
-<head><meta charset="UTF-8" /><title>Impressum</title></head>
-<body>
-  <h1>Impressum</h1>
-  <p><strong>Wohnwert+ Immobilien- und Wirtschaftskanzlei UG (haftungsbeschränkt)</strong><br>
-  Heiligengeiststraße 6–8, 26121 Oldenburg, Germany<br>
-  Handelsregister: HRB 41172, AG Berlin-Schönefeld<br>
-  Vertreten durch: Jan Jansen<br>
-  Finanzamt Oldenburg<br>
-  Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV: wie oben</p>
-</body>
-</html>
+<!DOCTYPE html><html lang='de'><head><meta charset='UTF-8'><title>Impressum</title></head><body><h1>Impressum</h1><p>Wohnwert+ Immobilien- und Wirtschaftskanzlei UG (haftungsbeschränkt)<br>Heiligengeiststraße 6–8, 26121 Oldenburg, Germany<br>Vertreten durch: Jan Jansen<br>HRB 41172, AG Berlin-Schönefeld<br>Finanzamt Oldenburg<br>Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV: Jan Jansen</p></body></html>
