--- a/impressum.html
+++ b/impressum.html
@@ -1,1 +1,46 @@
-<!DOCTYPE html><html lang='de'><head><meta charset='UTF-8'><title>Impressum</title></head><body><h1>Impressum</h1><p>Wohnwert+ Immobilien- und Wirtschaftskanzlei UG (haftungsbeschränkt)<br>Heiligengeiststraße 6–8, 26121 Oldenburg, Germany<br>Vertreten durch: Jan Jansen<br>HRB 41172, AG Berlin-Schönefeld<br>Finanzamt Oldenburg<br>Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV: Jan Jansen</p></body></html>
+
+<!DOCTYPE html>
+<html lang="de">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Impressum – wohnwert plus</title>
+    <style>
+        body { font-family: sans-serif; padding: 2rem; background: #fdfdfb; color: #1f1f1f; line-height: 1.6; max-width: 800px; margin: 0 auto; }
+        h1 { color: #0f2b44; }
+        a { color: #0f2b44; text-decoration: none; }
+    </style>
+</head>
+<body>
+    <h1>Impressum</h1>
+
+    <p><strong>Angaben gemäß § 5 TMG:</strong></p>
+    <p>
+        Wohnwert+ Immobilien- und Wirtschaftskanzlei Unternehmergesellschaft (Haftungsbeschränkt)<br>
+        Heiligengeiststraße 6–8<br>
+        26121 Oldenburg<br>
+        Germany
+    </p>
+
+    <p><strong>Vertreten durch:</strong><br>
+    Jan Jansen</p>
+
+    <p><strong>Kontakt:</strong><br>
+    E-Mail: <a href="mailto:info@wohnwert.plus">info@wohnwert.plus</a></p>
+
+    <p><strong>Registereintrag:</strong><br>
+    Eingetragen im Handelsregister.<br>
+    Registergericht: Amtsgericht Berlin-Schönefeld<br>
+    Handelsregisternummer: HRB 41172</p>
+
+    <p><strong>Zuständiges Finanzamt:</strong><br>
+    Finanzamt Oldenburg</p>
+
+    <p><strong>Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV:</strong><br>
+    Jan Jansen<br>
+    Heiligengeiststraße 6–8<br>
+    26121 Oldenburg</p>
+
+    <p><a href="index.html">Zurück zur Startseite</a></p>
+</body>
+</html>
