--- a/index.html
+++ b/index.html
@@ -2,40 +2,97 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wohnwert+ – Kurzzeitvermietung mit System</title>
-    <meta name="description" content="Individuelle Umnutzung, Einrichtung und Betrieb von Immobilien für die Kurzzeitvermietung. Beratung, Planung, Full-Service – alles aus einer Hand.">
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>wohnwert+</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: "Segoe UI", sans-serif;
+      background-color: #fdfbfb;
+      color: #1f1f1f;
+    }
+    header {
+      background-color: #001f3f;
+      padding: 1.5rem;
+      text-align: center;
+      color: #ffffff;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 2rem;
+    }
+    header p {
+      margin: 0.5rem 0 0;
+      font-size: 1rem;
+    }
+    .container {
+      padding: 2rem;
+    }
+    .lead {
+      font-size: 1.1rem;
+      margin-bottom: 2rem;
+      font-weight: 500;
+    }
+    .box-container {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 1rem;
+      justify-content: space-between;
+    }
+    .box {
+      flex: 1 1 30%;
+      background-color: #ece7e4;
+      padding: 1.5rem;
+      border-left: 5px solid #7c4f36;
+      box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+    }
+    .box h3 {
+      margin-top: 0;
+      color: #4a2e1e;
+    }
+    footer {
+      background-color: #001f3f;
+      color: #fff;
+      text-align: center;
+      padding: 1rem;
+      margin-top: 2rem;
+      font-size: 0.9rem;
+    }
+  </style>
 </head>
 <body>
-    <header>
-        <h1>wohnwert+</h1>
-        <p>Einrichten, Pflegen, Vermieten – Kurzzeitvermietung mit System</p>
-    </header>
+  <header>
+    <h1>wohnwert+</h1>
+    <p>Einrichten, Pflegen, Vermieten – Kurzzeitvermietung mit System</p>
+  </header>
 
-    <section>
-        <h2>Kurzzeitvermietung mit System – 16 Jahre Erfahrung in Umnutzung, Planung und Betrieb</h2>
-        <p>Ob Wohnung, Haus, Hotel oder Wohnmobilstellplatz – Wohnwert+ begleitet Sie von der Idee bis zum Betrieb. Wir bieten Beratung, Wirtschaftlichkeitsanalyse, Innenarchitektur, Einrichtung, Buchungssysteme, technische Services und Reinigung aus einer Hand.</p>
-    </section>
+  <div class="container">
+    <div class="lead">
+      Kurzzeitvermietung mit System – 16 Jahre Erfahrung in Umnutzung, Planung und Betrieb
+    </div>
+    <p>
+      Ob Wohnung, Haus, Hotel oder Wohnmobilstellplatz – Wohnwert+ begleitet Sie von der Idee bis zum Betrieb. Wir bieten Beratung, Wirtschaftlichkeitsanalyse, Innenarchitektur, Einrichtung, Buchungssysteme, technische Services und Reinigung aus einer Hand.
+    </p>
 
-    <section>
-        <div class="box">
-            <h3>Bestehende Wohnungen</h3>
-            <p>Umnutzung, Einrichtung, Service – alles aus einer Hand.</p>
-        </div>
-        <div class="box">
-            <h3>Häuser und Hotels</h3>
-            <p>Planung, Umbau und Optimierung für Kurzzeitvermietung.</p>
-        </div>
-        <div class="box">
-            <h3>Freiflächen</h3>
-            <p>Beratung & Bau von Tiny-Häusern oder Wohnmobilstellplätzen.</p>
-        </div>
-    </section>
+    <div class="box-container">
+      <div class="box">
+        <h3>Bestehende Wohnungen</h3>
+        <p>Umnutzung, Einrichtung, Service – alles aus einer Hand.</p>
+      </div>
+      <div class="box">
+        <h3>Häuser und Hotels</h3>
+        <p>Planung, Umbau und Optimierung für Kurzzeitvermietung.</p>
+      </div>
+      <div class="box">
+        <h3>Freiflächen</h3>
+        <p>Beratung & Bau von Tiny-Häusern oder Wohnmobilstellplätzen.</p>
+      </div>
+    </div>
+  </div>
 
-    <footer>
-        <p>© 2025 Wohnwert+ UG (haftungsbeschränkt), Heiligengeiststraße 6–8, 26121 Oldenburg</p>
-    </footer>
+  <footer>
+    © 2025 Wohnwert+ UG (haftungsbeschränkt), Heiligengeiststraße 6–8, 26121 Oldenburg
+  </footer>
 </body>
 </html>
