--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>wohnwert+</title>
+  <title>Wohnwert+ | Immobilienumnutzung & Kurzzeitvermietung Oldenburg</title>
+  <meta name="description" content="Beratung, Betreuung und Umnutzung von Immobilien für die Kurzzeitvermietung – rund um Oldenburg. Wohnwert+ begleitet Sie von der Idee bis zur Vermietung.">
   <style>
     body {
       margin: 0;
@@ -14,7 +15,7 @@
     }
     header {
       background-color: #001f3f;
-      padding: 1.5rem;
+      padding: 2rem;
       text-align: center;
       color: #ffffff;
     }
@@ -28,35 +29,40 @@
     }
     .container {
       padding: 2rem;
+      max-width: 960px;
+      margin: auto;
     }
     .lead {
-      font-size: 1.1rem;
-      margin-bottom: 2rem;
+      font-size: 1.3rem;
       font-weight: 500;
+      margin-bottom: 1.5rem;
     }
-    .box-container {
+    .section {
+      margin-bottom: 3rem;
+    }
+    .section h2 {
+      font-size: 1.5rem;
+      margin-bottom: 1rem;
+      border-left: 4px solid #7c4f36;
+      padding-left: 1rem;
+    }
+    .highlight-boxes {
       display: flex;
       flex-wrap: wrap;
       gap: 1rem;
-      justify-content: space-between;
     }
     .box {
       flex: 1 1 30%;
       background-color: #ece7e4;
-      padding: 1.5rem;
+      padding: 1.2rem;
       border-left: 5px solid #7c4f36;
       box-shadow: 0 1px 3px rgba(0,0,0,0.1);
-    }
-    .box h3 {
-      margin-top: 0;
-      color: #4a2e1e;
     }
     footer {
       background-color: #001f3f;
       color: #fff;
       text-align: center;
       padding: 1rem;
-      margin-top: 2rem;
       font-size: 0.9rem;
     }
   </style>
@@ -64,30 +70,45 @@
 <body>
   <header>
     <h1>wohnwert+</h1>
-    <p>Einrichten, Pflegen, Vermieten – Kurzzeitvermietung mit System</p>
+    <p>Einrichten, Pflegen, Vermieten – im Raum Oldenburg</p>
   </header>
 
   <div class="container">
     <div class="lead">
-      Kurzzeitvermietung mit System – 16 Jahre Erfahrung in Umnutzung, Planung und Betrieb
+      Kurzzeitvermietung mit System – von der Umnutzung bis zur täglichen Betreuung. Persönlich. Wirtschaftlich. Regional.
     </div>
-    <p>
-      Ob Wohnung, Haus, Hotel oder Wohnmobilstellplatz – Wohnwert+ begleitet Sie von der Idee bis zum Betrieb. Wir bieten Beratung, Wirtschaftlichkeitsanalyse, Innenarchitektur, Einrichtung, Buchungssysteme, technische Services und Reinigung aus einer Hand.
-    </p>
 
-    <div class="box-container">
-      <div class="box">
-        <h3>Bestehende Wohnungen</h3>
-        <p>Umnutzung, Einrichtung, Service – alles aus einer Hand.</p>
+    <div class="section">
+      <h2>Leistungen im Fokus</h2>
+      <div class="highlight-boxes">
+        <div class="box">
+          <h3>Beratung & Analyse</h3>
+          <p>Ist Kurzzeitvermietung für Ihre Immobilie sinnvoll? Wir analysieren Potenziale und beraten zu wirtschaftlicher Umsetzung.</p>
+        </div>
+        <div class="box">
+          <h3>Umnutzung & Planung</h3>
+          <p>Ob Wohnung, Haus oder Hotel – wir begleiten die Umwandlung Ihrer Immobilie zur erfolgreichen Kurzzeitvermietung.</p>
+        </div>
+        <div class="box">
+          <h3>Technik & Reinigung</h3>
+          <p>Wir übernehmen technische Betreuung, Reinigung und Gästeservice – zuverlässig, lokal und planbar.</p>
+        </div>
       </div>
-      <div class="box">
-        <h3>Häuser und Hotels</h3>
-        <p>Planung, Umbau und Optimierung für Kurzzeitvermietung.</p>
-      </div>
-      <div class="box">
-        <h3>Freiflächen</h3>
-        <p>Beratung & Bau von Tiny-Häusern oder Wohnmobilstellplätzen.</p>
-      </div>
+    </div>
+
+    <div class="section">
+      <h2>Für wen ist Wohnwert+</h2>
+      <p>Unser Angebot richtet sich an Eigentümer im Großraum Oldenburg (Umkreis 50 km), die:</p>
+      <ul>
+        <li>eine Wohnung oder Immobilie für Kurzzeitvermietung nutzen möchten,</li>
+        <li>eine Umnutzung planen oder prüfen lassen wollen,</li>
+        <li>Betreuung, Reinigung oder Buchungsservice suchen.</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>Kontakt</h2>
+      <p>Sie möchten mehr erfahren? Schreiben Sie uns an <strong>kontakt@wohnwert.plus</strong> – wir melden uns zeitnah zurück.</p>
     </div>
   </div>
 
