--- a/impressum.html
+++ b/impressum.html
@@ -2,45 +2,41 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Impressum – wohnwert plus</title>
-    <style>
-        body { font-family: sans-serif; padding: 2rem; background: #fdfdfb; color: #1f1f1f; line-height: 1.6; max-width: 800px; margin: 0 auto; }
-        h1 { color: #0f2b44; }
-        a { color: #0f2b44; text-decoration: none; }
-    </style>
+  <meta charset="UTF-8" />
+  <title>Impressum – Wohnwert+</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    body {
+      font-family: sans-serif;
+      max-width: 800px;
+      margin: 2rem auto;
+      padding: 1rem;
+      line-height: 1.6;
+    }
+    h1 {
+      color: #001f3f;
+    }
+  </style>
 </head>
 <body>
-    <h1>Impressum</h1>
+  <h1>Impressum</h1>
+  <p><strong>Wohnwert+ Immobilien- und Wirtschaftskanzlei Unternehmergesellschaft (Haftungsbeschränkt)</strong><br>
+  Heiligengeiststraße 6–8<br>
+  26121 Oldenburg<br>
+  Deutschland</p>
 
-    <p><strong>Angaben gemäß § 5 TMG:</strong></p>
-    <p>
-        Wohnwert+ Immobilien- und Wirtschaftskanzlei Unternehmergesellschaft (Haftungsbeschränkt)<br>
-        Heiligengeiststraße 6–8<br>
-        26121 Oldenburg<br>
-        Germany
-    </p>
+  <p>Vertreten durch: Jan Jansen</p>
 
-    <p><strong>Vertreten durch:</strong><br>
-    Jan Jansen</p>
+  <p>Registergericht: Amtsgericht Berlin-Schönefeld<br>
+  Handelsregisternummer: HRB 41172</p>
 
-    <p><strong>Kontakt:</strong><br>
-    E-Mail: <a href="mailto:info@wohnwert.plus">info@wohnwert.plus</a></p>
+  <p>Finanzamt Oldenburg</p>
 
-    <p><strong>Registereintrag:</strong><br>
-    Eingetragen im Handelsregister.<br>
-    Registergericht: Amtsgericht Berlin-Schönefeld<br>
-    Handelsregisternummer: HRB 41172</p>
+  <p>Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV:<br>
+  Jan Jansen, Heiligengeiststraße 6–8, 26121 Oldenburg</p>
 
-    <p><strong>Zuständiges Finanzamt:</strong><br>
-    Finanzamt Oldenburg</p>
+  <p>Kontakt: <a href="mailto:kontakt@wohnwert.plus">kontakt@wohnwert.plus</a></p>
 
-    <p><strong>Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV:</strong><br>
-    Jan Jansen<br>
-    Heiligengeiststraße 6–8<br>
-    26121 Oldenburg</p>
-
-    <p><a href="index.html">Zurück zur Startseite</a></p>
+  <p><a href="index.html">Zurück zur Startseite</a></p>
 </body>
 </html>
