--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
       padding: 1rem;
       font-size: 0.9rem;
     }
+    footer a {
+      color: #ffffff;
+      text-decoration: underline;
+    }
   </style>
 </head>
 <body>
@@ -113,7 +117,8 @@
   </div>
 
   <footer>
-    © 2025 Wohnwert+ UG (haftungsbeschränkt), Heiligengeiststraße 6–8, 26121 Oldenburg
+    © 2025 Wohnwert+ UG (haftungsbeschränkt), Heiligengeiststraße 6–8, 26121 Oldenburg<br>
+    <a href="impressum.html">Impressum</a>
   </footer>
 </body>
 </html>
